--- a/pages/sass/style2.scss
+++ b/pages/sass/style2.scss
@@ -1,4 +1,5 @@
-/*./dart-sass/sass sass/style2.scss style2.css --watch*/
+/*cd C:\Users\popie\Desktop\Livrables\P3_POPIELARZ_Manon\pages
+./dart-sass/sass sass/style2.scss style2.css --watch*/
 *{
     scroll-behavior: smooth;
     transition: 0.3s;
@@ -32,6 +33,52 @@ html, body {
     %hovernshadows{ 
         box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     }
+      /*-------------------- LOADING -----------------------*/
+
+.loader-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fafafa;
+    z-index: 999;
+    transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+    animation-iteration-count: 3;
+    animation: backload 3s ease forwards;
+    .loader{
+        width: 120px;
+        height: 120px;
+        border: 14px solid rgb(228, 228, 228);
+        border-radius: 50%;
+        border-top: 14px solid #99E2D0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        animation-iteration-count: 3;
+        animation: loader 3s ease forwards;
+
+    }
+    @keyframes backload{
+
+        100%{
+            opacity:0;
+            visibility: hidden;
+        }
+    }  
+    @keyframes loader {
+        0%{
+            transform: translate(-50%, -50%) rotate(0deg);
+
+        }
+        100%{
+            transform: translate(-50%, -50%) rotate(360deg);
+            opacity:0;
+            visibility: hidden;
+        }
+    }   
+}
+  
     
   
     /*----------------------------------------HEADER---------------------------------------------------------*/
