--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,8 @@ html, body {
     }
 }
 
+  
+
 
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
@@ -25,6 +27,54 @@ $tertiary:#99E2D0;
 %hovernshadows{ 
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
 }
+
+
+  
+    /*-------------------- LOADING -----------------------*/
+
+    .loader-container{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fafafa;
+        z-index: 999;
+        transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+        animation: backload 1s ease forwards;
+
+        .loader{
+            width: 120px;
+            height: 120px;
+            border: 14px solid rgb(228, 228, 228);
+            border-radius: 50%;
+            border-top: 14px solid #99E2D0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            animation: loader 1s ease forwards;
+    
+        }
+        @keyframes backload{
+ 
+            100%{
+                opacity:0;
+                visibility: hidden;
+            }
+        }  
+        @keyframes loader {
+            0%{
+                transform: translate(-50%, -50%) rotate(0deg);
+    
+            }
+  
+            100%{
+                transform: translate(-50%, -50%) rotate(360deg);
+                opacity:0;
+                visibility: hidden;
+            }
+        }   
+    }
   
 
 /*----------------------------------------HEADER---------------------------------------------------------*/
