--- a/sass/layout/_header2.scss
+++ b/sass/layout/_header2.scss
@@ -138,6 +138,7 @@ header{
         border-bottom-color: rgba(58, 58, 58, 0.288);
         border-bottom-style: solid;
         border-width:5px;
+       
             
     a{
         text-decoration: none;
@@ -161,7 +162,7 @@ header{
         display: block;
         color: gray;
         text-decoration: none;
-        font-size: 4vw;
+        font-size: 2vw;
         
 
     }
@@ -169,7 +170,7 @@ header{
     span{
         display:block;
         width: 20px;
-        margin-right: 65px;
+        margin-right: 15vw;
     }
 
    
@@ -186,7 +187,7 @@ header{
 
 .logo{
     height: 4vw;
-        margin-right: 90px;
+    margin-right: 50vw;
 }
 }
 
