--- a/sass/pages/restaurants/_banniere.scss
+++ b/sass/pages/restaurants/_banniere.scss
@@ -37,3 +37,23 @@
             
         }
 }
+/*------------------DESKTOP----------------------*/
+@media (min-width: 770px) {
+    .overlap{
+  
+        width: 100%;
+        height: 22vw;
+        position: absolute;
+    }
+    .banniere
+        {
+            width: 100%;
+            height: 25vw;
+            position: relative;
+            animation-name: fadein;
+            animation-duration: 1s;
+            animation-timing-function: ease-in-out;
+            
+        }
+   
+}
