--- a/style2.css
+++ b/style2.css
@@ -156,12 +156,12 @@ header .logo {
     display: block;
     color: gray;
     text-decoration: none;
-    font-size: 4vw;
+    font-size: 2vw;
   }
   header span {
     display: block;
     width: 20px;
-    margin-right: 65px;
+    margin-right: 15vw;
   }
 }
 header #head {
@@ -173,7 +173,7 @@ header #head {
 }
 header .logo {
   height: 4vw;
-  margin-right: 90px;
+  margin-right: 50vw;
 }
 
 .explorer {
@@ -239,6 +239,23 @@ header .logo {
   .banniere {
     width: 100%;
     height: 400px;
+    position: relative;
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+}
+/*------------------DESKTOP----------------------*/
+@media (min-width: 770px) {
+  .overlap {
+    width: 100%;
+    height: 22vw;
+    position: absolute;
+  }
+
+  .banniere {
+    width: 100%;
+    height: 25vw;
     position: relative;
     animation-name: fadein;
     animation-duration: 1s;
@@ -665,6 +682,7 @@ header .logo {
     left: 70vw;
   }
 }
+/*------------------DESKTOP----------------------*/
 .select {
   /*-----------------------------------TABLETTE-------------*/
 }
@@ -687,6 +705,7 @@ header .logo {
   }
 }
 
+/*------------------DESKTOP----------------------*/
 @media (max-width: 498px) {
   .end {
     background-color: #424242;
